[package]
name = "forest-client-consensus-relay-chain"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"
description = "The relay-chain provided consensus algorithm"

[dependencies]
async-trait = "0.1.58"
futures = "0.3.24"
parking_lot = "0.12.1"
tracing = "0.1.37"

# Substrate
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

# Forest
forest-client-consensus-common = { path = "../common" }
forest-primitives-core = { path = "../../../primitives/core" }
forest-relay-chain-interface = { path = "../../relay-chain-interface" }
